--- a/FoodRecipes-project/src/App.css
+++ b/FoodRecipes-project/src/App.css
@@ -1,4 +1,14 @@
-.SouthBreakFast{
-    width: 10px;
-    background-color: red;
-};
+nav {
+  position: fixed;   
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: #11a3c3;   
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  z-index: 1000;      
+}
