--- a/FoodRecipes-project/src/App.css
+++ b/FoodRecipes-project/src/App.css
@@ -1,14 +1,41 @@
+
+body{
+    background-color: rgba(203, 205, 216, 0.697);
+     
+}
+
 nav {
+  display: flex;
   position: fixed;   
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   background: #11a3c3;   
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display:flex ;
   gap: 20px;
-  z-index: 1000;      
+  z-index: 1000;   
+  justify-content: center;
+  align-items: center;   
+}
+.login-icon{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+
+.nav-left{
+  margin-left: 40px;
+  
+}
+.nav-right{
+  vertical-align: middle;
+  width: 90%;
+  justify-content: end;
+  align-items: end;
 }
